finished grid for 1000 media query

--- a/index.html
+++ b/index.html
@@ -97,17 +97,7 @@
 				</div>
 			</div>
 
-			<div class="cover quote">
-				<img src="images/quotes.svg">
-				<p>Was this what the stars meant, Dru? That I would fade, burn up from the inside out til there was nothing left but ash?&rdquo;</p>
-				<div class="credits">
-					<h3><a href="#">&mdash;She's Out Of Her Mind</a></h3>
-					<h4><a href="#">by BeneficialAddiction</a></h4>
-					<h4>BUFFY THE VAMPIRE SLAYER</h4>
-				</div>
-			</div>
-
-			<div class="cover cover-max">
+			<div class="cover cover-max cover-desk">
 				<img class="cover-img" src="images/dollhouse-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
@@ -122,7 +112,7 @@
 				</div>
 			</div>
 
-			<div class="cover cover-max">
+			<div class="cover cover-max cover-desk">
 				<img class="cover-img" src="images/firefly-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
@@ -133,6 +123,106 @@
 					<img class="more" src="images/arrow.svg">
 					<!-- <div class="sub-info">
 						<h4>Selective SciFi Junkie</h4>
+					</div> -->	
+				</div>
+			</div>
+
+			<div class="cover quote ">
+				<img src="images/quotes.svg">
+				<p>Was this what the stars meant, Dru? That I would fade, burn up from the inside out til there was nothing left but ash?&rdquo;</p>
+				<div class="credits">
+					<h3><a href="#">&mdash;She's Out Of Her Mind</a></h3>
+					<h4><a href="#">by BeneficialAddiction</a></h4>
+					<h4>BUFFY THE VAMPIRE SLAYER</h4>
+				</div>
+			</div>
+
+			<div class="cover cover-max cover-tab">
+				<img class="cover-img" src="images/dollhouse-2.jpg">
+				<div class="blurb">
+					<img class="icon" src="images/tv.svg">
+					<p>TV</p>
+					<br>
+					<h3>A Day In The Life Of Echo</h3>
+					<h5>DOLLHOUSE</h5>
+					<img class="more" src="images/arrow.svg">
+					<!-- <div class="sub-info">
+						<h4>sunnydalesis</h4>
+					</div> -->	
+				</div>
+			</div>		
+
+			<div class="cover cover-max cover-tab">
+				<img class="cover-img" src="images/firefly-2.jpg">
+				<div class="blurb">
+					<img class="icon" src="images/tv.svg">
+					<p>TV</p>
+					<br>
+					<h3>Strange Bedfellows</h3>
+					<h5>FIREFLY</h5>
+					<img class="more" src="images/arrow.svg">
+					<!-- <div class="sub-info">
+						<h4>Selective SciFi Junkie</h4>
+					</div> -->	
+				</div>
+			</div>
+
+			<div class="cover cover-max cover-desk">
+				<img class="cover-img" src="images/bsg-2.jpg">
+				<div class="blurb">
+					<img class="icon" src="images/tv.svg">
+					<p>TV</p>
+					<br>
+					<h3>Changing Rooms</h3>
+					<h5>BATTLESTAR GALACTICA</h5>
+					<img class="more" src="images/arrow.svg">
+					<!-- <div class="sub-info">
+						<h4>Aussiegirl41</h4>
+					</div> -->	
+				</div>
+			</div>
+			
+			<div class="cover cover-max cover-desk">
+				<img class="cover-img" src="images/fringe-2.jpg">
+				<div class="blurb">
+					<img class="icon" src="images/tv.svg">
+					<p>TV</p>
+					<br>
+					<h3>Our Bodies In Light</h3>
+					<h5>FRINGE</h5>
+					<img class="more" src="images/arrow.svg">
+					<!-- <div class="sub-info">
+						<h4>alternatedunham</h4>
+					</div> -->	
+				</div>
+			</div>
+
+			<div class="cover cover-max cover-desk">
+				<img class="cover-img" src="images/titanic-2.jpg">
+				<div class="blurb">
+					<img class="icon" src="images/film.svg">
+					<p>FILM</p>
+					<br>
+					<h3>The Unsinkable Ship</h3>
+					<h5>TITANIC</h5>
+					<img class="more" src="images/arrow.svg">
+					<!-- <div class="sub-info">
+						<h4>leo4eva</h4>
+					</div>	 -->
+				</div>
+			</div>
+
+			<div class="cover cover-max cover-desk">
+				<img class="cover-img" src="images/bob-2.jpg">
+				<div class="blurb">
+					<img class="icon" src="images/tv.svg">
+					<p>TV</p>
+					<br>
+					<h3>Stuck In Detention With You</h3>
+					<h5>BOB'S BURGERS</h5>
+					<img class="more" src="images/arrow.svg">
+					<!-- <div class="sub-info">
+						<h4>christian95</h4>
 					</div> -->	
 				</div>
 			</div>
@@ -150,7 +240,7 @@
 				<img class="more" src="images/arrow.svg">
 			</div>
 
-			<div class="cover cover-max">
+			<div class="cover cover-max cover-tab">
 				<img class="cover-img" src="images/bsg-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
@@ -165,7 +255,7 @@
 				</div>
 			</div>
 
-			<div class="cover cover-max">
+			<div class="cover cover-max cover-tab">
 				<img class="cover-img" src="images/fringe-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
@@ -180,7 +270,7 @@
 				</div>
 			</div>
 
-			<div class="cover cover-max">
+			<div class="cover cover-max cover-tab">
 				<img class="cover-img" src="images/titanic-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/film.svg">
@@ -195,7 +285,7 @@
 				</div>
 			</div>
 
-			<div class="cover cover-max">
+			<div class="cover cover-max cover-tab">
 				<img class="cover-img" src="images/bob-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
