fixed spacing of content in author box for 1000 media query

--- a/index.html
+++ b/index.html
@@ -234,10 +234,11 @@
 					<h4>Eva Tallahassee</h4>
 				</div>
 				<div class="interview">
-					<p>Eva, author of <span><a href="#">Everyone Is Doing It,</a></span> dishes about breakfast with Daniel Radcliff and that time she got to dance with Patrick Swayze.</p>
+					<p>Eva, author of <span><a href="#">Everyone Is Doing It,</a></span> dishes about breakfast with Daniel Radcliff and that time she got to dance with Patrick Swayze.<br><span class="read-more"><a href="#"> Read the full interview</a></span></p>
+
 				</div>
 				<div class="clear-fix"></div>
-				<img class="more" src="images/arrow.svg">
+				<!-- <img class="more" src="images/arrow.svg"> -->
 			</div>
 
 			<div class="cover cover-max cover-tab">
