added link to h1

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 					</ul>
         		</li>
         	</ul>	
-	    	<h1>&nbspChapter Zero</h1>
+	    	<h1><a href="index.html">&nbspChapter Zero</a></h1>
     		<button>SUBSCRIBE</button>
 	    </nav>
 	</header>
 
 	<nav class="desktop-nav">
-    	<h1>Chapter Zero</h1>
+    	<h1><a href="index.html">Chapter Zero</a></h1>
     	<button>SUBSCRIBE</button>
     	<ul>
     		<li><a href="#">ANIME</a></li>
