added links to story page on buffy card

--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
 		<div class="cover-art">
 
 			<div class="cover cover-max">
-				<img class="cover-img" src="images/buffy-2.jpg">
-				<div class="blurb">
+				<a href="story.html"><img class="cover-img" src="images/buffy-2.jpg"></a>
+				<a href="story.html"><div class="blurb">
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
 					<br>
-					<h3>She's Out Of Her Mind</h3>
-					<h5>BUFFY THE VAMPIRE SLAYER</h5>
+					<a href="story.html"><h3>She's Out Of Her Mind</h3></a>
+					<a href="story.html"><h5>BUFFY THE VAMPIRE SLAYER</h5></a>
 					
 					<span class="show-more"><a href="#nothing"><img class="more" src="images/arrow.svg"></a></span>
 
@@ -85,7 +85,7 @@
 						</div>
 					</div>
 
-				</div>
+				</div></a>
 			</div>
 
 			<div class="cover cover-max">
