edited typesetting of story

--- a/story.html
+++ b/story.html
@@ -52,6 +52,8 @@
     </nav>
 
 	<div class="story-container">
+		<h3>She&rsquo;s Out of Her Mind</h3>
+		<h4>by BeneficialAddiction</h4>
 		<p>Out of sight, out of mind. That seemed to be the mantra of the Scoobies these days. and it seemed to be working for them. The whelp, the witch, even the watcher, they were all blind. Blind to the pain he so desperately tried to push through every day, blind to the help he tried to give in her memory. Worse, blind to the Bit, and all the problems that had started to pile up around the young girl now that her sister was...</p>
 		<br>
 		<p>Spike couldn&rsquo;t say it. Couldn&rsquo;t think of it. Four months, and he still couldn&rsquo;t bring himself to face it. If the Slayerettes&rsquo; mantra was &lsquo;out of sight, our of mind,&rsquo; then Spike&rsquo;s was &lsquo;absence makes the heart grow fonder.&rsquo; Every time the sun fell, every time Spike was dragged awake with hope burning in his throat that his dreams were a reality and he had really done it this time, really saved her, it crushed him anew. But his love for her never lessened.</p>
