--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
 					<br>
-					<a href="story.html"><h3>She's Out Of Her Mind</h3></a>
+					<a href="story.html"><h3>She&rsquo;s Out Of Her Mind</h3></a>
 					<a href="story.html"><h5>BUFFY THE VAMPIRE SLAYER</h5></a>
 					
 					<span class="show-more"><a href="#nothing"><img class="more" src="images/arrow.svg"></a></span>
@@ -97,9 +97,6 @@
 					<h3>Only Happy Hearts Feel Pain</h3>
 					<h5>ANGEL</h5>
 					<img class="more" src="images/arrow.svg">
-					<!-- <div class="sub-info">
-						<h4>ang3l4life</h4>
-					</div> -->	
 				</div>
 			</div>
 
@@ -112,9 +109,6 @@
 					<h3>A Day In The Life Of Echo</h3>
 					<h5>DOLLHOUSE</h5>
 					<img class="more" src="images/arrow.svg">
-					<!-- <div class="sub-info">
-						<h4>sunnydalesis</h4>
-					</div> -->	
 				</div>
 			</div>
 
@@ -127,9 +121,6 @@
 					<h3>Strange Bedfellows</h3>
 					<h5>FIREFLY</h5>
 					<img class="more" src="images/arrow.svg">
-					<!-- <div class="sub-info">
-						<h4>Selective SciFi Junkie</h4>
-					</div> -->	
 				</div>
 			</div>
 
@@ -137,7 +128,7 @@
 				<img src="images/quotes.svg">
 				<p>Was this what the stars meant, Dru? That I would fade, burn up from the inside out til there was nothing left but ash?&rdquo;</p>
 				<div class="credits">
-					<h3><a href="#">&mdash;She's Out Of Her Mind</a></h3>
+					<h3><a href="#">&mdash;She&rsquo;s Out Of Her Mind</a></h3>
 					<h4><a href="#">by BeneficialAddiction</a></h4>
 					<h4>BUFFY THE VAMPIRE SLAYER</h4>
 				</div>
@@ -152,9 +143,6 @@
 					<h3>A Day In The Life Of Echo</h3>
 					<h5>DOLLHOUSE</h5>
 					<img class="more" src="images/arrow.svg">
-					<!-- <div class="sub-info">
-						<h4>sunnydalesis</h4>
-					</div> -->	
 				</div>
 			</div>		
 
@@ -167,9 +155,6 @@
 					<h3>Strange Bedfellows</h3>
 					<h5>FIREFLY</h5>
 					<img class="more" src="images/arrow.svg">
-					<!-- <div class="sub-info">
-						<h4>Selective SciFi Junkie</h4>
-					</div> -->	
 				</div>
 			</div>
 
@@ -182,9 +167,6 @@
 					<h3>Changing Rooms</h3>
 					<h5>BATTLESTAR GALACTICA</h5>
 					<img class="more" src="images/arrow.svg">
-					<!-- <div class="sub-info">
-						<h4>Aussiegirl41</h4>
-					</div> -->	
 				</div>
 			</div>
 			
@@ -197,9 +179,6 @@
 					<h3>Our Bodies In Light</h3>
 					<h5>FRINGE</h5>
 					<img class="more" src="images/arrow.svg">
-					<!-- <div class="sub-info">
-						<h4>alternatedunham</h4>
-					</div> -->	
 				</div>
 			</div>
 
@@ -212,9 +191,6 @@
 					<h3>The Unsinkable Ship</h3>
 					<h5>TITANIC</h5>
 					<img class="more" src="images/arrow.svg">
-					<!-- <div class="sub-info">
-						<h4>leo4eva</h4>
-					</div>	 -->
 				</div>
 			</div>
 
@@ -225,11 +201,8 @@
 					<p>TV</p>
 					<br>
 					<h3>Stuck In Detention With You</h3>
-					<h5>BOB'S BURGERS</h5>
+					<h5>BOB&rsquo;S BURGERS</h5>
 					<img class="more" src="images/arrow.svg">
-					<!-- <div class="sub-info">
-						<h4>christian95</h4>
-					</div> -->	
 				</div>
 			</div>
 
@@ -256,9 +229,6 @@
 					<h3>Changing Rooms</h3>
 					<h5>BATTLESTAR GALACTICA</h5>
 					<img class="more" src="images/arrow.svg">
-					<!-- <div class="sub-info">
-						<h4>Aussiegirl41</h4>
-					</div> -->	
 				</div>
 			</div>
 
@@ -271,9 +241,6 @@
 					<h3>Our Bodies In Light</h3>
 					<h5>FRINGE</h5>
 					<img class="more" src="images/arrow.svg">
-					<!-- <div class="sub-info">
-						<h4>alternatedunham</h4>
-					</div> -->	
 				</div>
 			</div>
 
@@ -286,9 +253,6 @@
 					<h3>The Unsinkable Ship</h3>
 					<h5>TITANIC</h5>
 					<img class="more" src="images/arrow.svg">
-					<!-- <div class="sub-info">
-						<h4>leo4eva</h4>
-					</div>	 -->
 				</div>
 			</div>
 
@@ -299,11 +263,8 @@
 					<p>TV</p>
 					<br>
 					<h3>Stuck In Detention With You</h3>
-					<h5>BOB'S BURGERS</h5>
+					<h5>BOB&rsquo;S BURGERS</h5>
 					<img class="more" src="images/arrow.svg">
-					<!-- <div class="sub-info">
-						<h4>christian95</h4>
-					</div> -->	
 				</div>
 			</div>
 
@@ -316,9 +277,6 @@
 					<h3>Catch Me If You Can</h3>
 					<h5>HARRY POTTER</h5>
 					<img class="more" src="images/arrow.svg">
-					<!-- <div class="sub-info">
-						<h4>seeker216</h4>
-					</div> -->	
 				</div>
 			</div>
 
@@ -331,9 +289,6 @@
 					<h3>New Friends</h3>
 					<h5>SERENITY</h5>
 					<img class="more" src="images/arrow.svg">
-					<!-- <div class="sub-info">
-						<h4>AlwayzHuman</h4>
-					</div> -->	
 				</div>
 			</div>
 
@@ -346,9 +301,6 @@
 					<h3>Locking Horns</h3>
 					<h5>SUPERNATURAL</h5>
 					<img class="more" src="images/arrow.svg">
-					<!-- <div class="sub-info">
-						<h4>celinaville</h4>
-					</div> -->	
 				</div>
 			</div>
 
@@ -361,9 +313,6 @@
 					<h3>Missing Mother</h3>
 					<h5>LAW AND ORDER : SVU</h5>
 					<img class="more" src="images/arrow.svg">
-					<!-- <div class="sub-info">
-						<h4>melted by shadows</h4>
-					</div> -->	
 				</div>
 			</div>
 
