changed one word in author credits on story.html

--- a/story.html
+++ b/story.html
@@ -99,7 +99,7 @@
 		
 		<div class="horiz-line"></div>
 
-		<p><span>Beneficial Addiction is a fan-fiction writer based out of Sunnydale, California. His other works can be found at <a href="https://www.fanfiction.net/u/1465348/BeneficialAddiction">fanfiction.net.</a></span></p> 
+		<p><span>Beneficial Addiction is a fan-fiction writer based out of Sunnydale, California. His other stories can be found at <a href="https://www.fanfiction.net/u/1465348/BeneficialAddiction">fanfiction.net.</a></span></p> 
 
 	</div>	
 
