--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="js/modernizr.js"></script>
     <script src="https://use.typekit.net/xsz5hca.js"></script>
 	<script>try{Typekit.load({ async: true });}catch(e){}</script>
+	<link href="dist/hamburgers.css" rel="stylesheet">
 </head>
 
 <body>
