attempting to add some flare. blurbs are not done but i need food badly

--- a/index.html
+++ b/index.html
@@ -52,17 +52,12 @@
 		</ul>	
     </nav>
 
-	<section class="intro">
-		<p>Chapter Zero is a curated site for the best of the best in fan-fiction. This is a place for readers to enjoy new stories based around their favorite characters. Our team of avid fan-fiction readers select the most interesting and original stories every week. Find out how to get your story published <a href="#">here.</a></p>
-		<div class="social-icons">
-			<img src="images/facebook.svg">
-			<img src="images/twitter.svg">
-			<img src="images/pinterest.svg">
-			<img src="images/instagram.svg">
-		</div>
-	</section>
-
-	<img class="ad" src="images/banner.jpg">
+	<!-- <div class="social-icons">
+		<img src="images/facebook.svg">
+		<img src="images/twitter.svg">
+		<img src="images/pinterest.svg">
+		<img src="images/instagram.svg">
+	</div> -->
 	
 	<section class="stories">
 
@@ -79,10 +74,17 @@
 					
 					<span class="show-more"><a href="#nothing"><img class="more" src="images/arrow.svg"></a></span>
 
-					<div class="modal-backdrop">
+					<!-- <div class="modal-backdrop">
 						<div class="modal">
 							<img src="images/summary.png">
 							<a href="#nothing" class="hide-modal"></a>
+						</div>
+					</div> -->
+
+					<div class="modal-backdrop">
+						<div class="modal">
+							<a href="#nothing" class="hide-modal">close</a>
+							<h3>When Willow resurrects Buffy, she doesn't come back numb, she comes back nuts! Racing to find a cure for their friend, the Scoobies quickly realize that they have no idea how to control or care for an insane Slayer, and must return to the person they've spent all summer ignoring and alienating, the one person they know with over a century of crazy under his belt...<br><a href="story.html">Read this story</a></h3>
 						</div>
 					</div>
 
@@ -95,7 +97,7 @@
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
 					<br>
-					<h3>Only Happy Hearts Feel Pain</h3>
+					<h3>Happy Hearts Feel Pain</h3>
 					<h5>ANGEL</h5>
 					<img class="more" src="images/arrow.svg">
 				</div>
@@ -201,7 +203,7 @@
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
 					<br>
-					<h3>Stuck In Detention With You</h3>
+					<h3>THERE'S BURGERS HERE</h3>
 					<h5>BOB&rsquo;S BURGERS</h5>
 					<img class="more" src="images/arrow.svg">
 				</div>
@@ -263,7 +265,7 @@
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
 					<br>
-					<h3>Stuck In Detention With You</h3>
+					<h3>THERE'S BURGERS HERE</h3>
 					<h5>BOB&rsquo;S BURGERS</h5>
 					<img class="more" src="images/arrow.svg">
 				</div>
@@ -319,6 +321,10 @@
 
 		</div>	
 		
+	</section>
+
+	<section class="intro">
+		<p>Chapter Zero is a curated site for the best of the best in fan-fiction. This is a place for readers to enjoy new stories based around their favorite characters. Our team of avid fan-fiction readers select the most interesting and original stories every week. Find out how to get your story published <a href="#">here.</a></p>
 	</section>
 
 	<footer>
