added social icons and box shadow to story page

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					<br>
 					<a href="story.html"><h3>She&rsquo;s Out Of Her Mind</h3></a>
 					<a href="story.html"><h5>BUFFY THE VAMPIRE SLAYER</h5></a>
-					
+					<br>
 					<span class="show-more"><a href="#nothing"><img class="more" src="images/arrow.svg"></a></span>
 
 					<!-- <div class="modal-backdrop">
@@ -84,7 +84,7 @@
 					<div class="modal-backdrop">
 						<div class="modal">
 							<a href="#nothing" class="hide-modal">close</a>
-							<h3>When Willow resurrects Buffy, she doesn't come back numb, she comes back nuts! Racing to find a cure for their friend, the Scoobies quickly realize that they have no idea how to control or care for an insane Slayer, and must return to the person they've spent all summer ignoring and alienating, the one person they know with over a century of crazy under his belt...<br><a href="story.html">Read this story</a></h3>
+							<h3 class="modal-blurb">When Willow resurrects Buffy, she doesn't come back numb, she comes back nuts! Racing to find a cure for their friend, the Scoobies quickly realize that they have no idea how to control or care for an insane Slayer, and must return to the person they've spent all summer ignoring and alienating, the one person they know with over a century of crazy under his belt...<br><a href="story.html">Read this story</a></h3>
 						</div>
 					</div>
 
@@ -99,6 +99,7 @@
 					<br>
 					<h3>Happy Hearts Feel Pain</h3>
 					<h5>ANGEL</h5>
+					<br>
 					<img class="more" src="images/arrow.svg">
 				</div>
 			</div>
@@ -111,6 +112,7 @@
 					<br>
 					<h3>A Day In The Life Of Echo</h3>
 					<h5>DOLLHOUSE</h5>
+					<br>
 					<img class="more" src="images/arrow.svg">
 				</div>
 			</div>
@@ -123,6 +125,7 @@
 					<br>
 					<h3>Strange Bedfellows</h3>
 					<h5>FIREFLY</h5>
+					<br>
 					<img class="more" src="images/arrow.svg">
 				</div>
 			</div>
@@ -145,6 +148,7 @@
 					<br>
 					<h3>A Day In The Life Of Echo</h3>
 					<h5>DOLLHOUSE</h5>
+					<br>
 					<img class="more" src="images/arrow.svg">
 				</div>
 			</div>		
@@ -157,6 +161,7 @@
 					<br>
 					<h3>Strange Bedfellows</h3>
 					<h5>FIREFLY</h5>
+					<br>
 					<img class="more" src="images/arrow.svg">
 				</div>
 			</div>
@@ -169,6 +174,7 @@
 					<br>
 					<h3>Changing Rooms</h3>
 					<h5>BATTLESTAR GALACTICA</h5>
+					<br>
 					<img class="more" src="images/arrow.svg">
 				</div>
 			</div>
@@ -181,6 +187,7 @@
 					<br>
 					<h3>Our Bodies In Light</h3>
 					<h5>FRINGE</h5>
+					<br>
 					<img class="more" src="images/arrow.svg">
 				</div>
 			</div>
@@ -193,6 +200,7 @@
 					<br>
 					<h3>The Unsinkable Ship</h3>
 					<h5>TITANIC</h5>
+					<br>
 					<img class="more" src="images/arrow.svg">
 				</div>
 			</div>
@@ -205,6 +213,7 @@
 					<br>
 					<h3>THERE'S BURGERS HERE</h3>
 					<h5>BOB&rsquo;S BURGERS</h5>
+					<br>
 					<img class="more" src="images/arrow.svg">
 				</div>
 			</div>
@@ -216,8 +225,7 @@
 					<h4>Eva Tallahassee</h4>
 				</div>
 				<div class="interview">
-					<p>Eva, author of <span><a href="#">Everyone Is Doing It,</a></span> dishes about breakfast with Daniel Radcliff and that time she got to dance with Patrick Swayze.<br><span class="read-more"><a href="#"> Read the full interview</a></span></p>
-
+					<p>Eva, author of <span><a href="#">Everyone Is Doing It,</a></span> dishes about breakfast with Daniel Radcliff and that time she got to dance with Patrick Swayze.<br><br><span class="read-more"><a href="#"> Read the full interview</a></span></p>
 				</div>
 				<div class="clear-fix"></div>
 				<!-- <img class="more" src="images/arrow.svg"> -->
@@ -231,6 +239,7 @@
 					<br>
 					<h3>Changing Rooms</h3>
 					<h5>BATTLESTAR GALACTICA</h5>
+					<br>
 					<img class="more" src="images/arrow.svg">
 				</div>
 			</div>
@@ -243,6 +252,7 @@
 					<br>
 					<h3>Our Bodies In Light</h3>
 					<h5>FRINGE</h5>
+					<br>
 					<img class="more" src="images/arrow.svg">
 				</div>
 			</div>
@@ -255,6 +265,7 @@
 					<br>
 					<h3>The Unsinkable Ship</h3>
 					<h5>TITANIC</h5>
+					<br>
 					<img class="more" src="images/arrow.svg">
 				</div>
 			</div>
@@ -267,6 +278,7 @@
 					<br>
 					<h3>THERE'S BURGERS HERE</h3>
 					<h5>BOB&rsquo;S BURGERS</h5>
+					<br>
 					<img class="more" src="images/arrow.svg">
 				</div>
 			</div>
@@ -279,6 +291,7 @@
 					<br>
 					<h3>Catch Me If You Can</h3>
 					<h5>HARRY POTTER</h5>
+					<br>
 					<img class="more" src="images/arrow.svg">
 				</div>
 			</div>
@@ -291,6 +304,7 @@
 					<br>
 					<h3>New Friends</h3>
 					<h5>SERENITY</h5>
+					<br>
 					<img class="more" src="images/arrow.svg">
 				</div>
 			</div>
@@ -303,6 +317,7 @@
 					<br>
 					<h3>Locking Horns</h3>
 					<h5>SUPERNATURAL</h5>
+					<br>
 					<img class="more" src="images/arrow.svg">
 				</div>
 			</div>
@@ -315,6 +330,7 @@
 					<br>
 					<h3>Missing Mother</h3>
 					<h5>LAW AND ORDER : SVU</h5>
+					<br>
 					<img class="more" src="images/arrow.svg">
 				</div>
 			</div>
