--- a/story.html
+++ b/story.html
@@ -53,7 +53,13 @@
 
 
 	<div class="story-container">
+		<div class="sticky-socials">
+			<a href="#"><img src="images/sticky-socials.svg"></a>
+		</div>
 		<img class="buffy-banner" src="images/buffy-banner.jpg">
+		<div class="sticky-socials-horiz">
+			<a href="#"><img src="images/sticky-socials-horiz.svg"></a>
+		</div>
 		<h3>She&rsquo;s Out of Her Mind</h3>
 		<h4>by BeneficialAddiction</h4>
 
@@ -96,9 +102,10 @@
 		<p>And he would. Will the End of the World. That had been his promise.</p>
 		<br>
 		<p>&ldquo;Till the end of the world,&rdquo; he muttered. And then he was finally asleep.</p>
-		
+		<div class="sticky-socials-horiz">
+			<a href="#"><img src="images/sticky-socials-horiz.svg"></a>
+		</div>
 		<div class="horiz-line"></div>
-
 		<p><span>Beneficial Addiction is a fan-fiction writer based out of Sunnydale, California. His other stories can be found at <a href="https://www.fanfiction.net/u/1465348/BeneficialAddiction">fanfiction.net.</a></span></p> 
 
 	</div>	
