changed card titles for mobile only, tablet and desktop next

--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
         		</li>
         	</ul>	
 	    	<h1><a href="index.html">&nbspChapter Zero</a></h1>
-    		<button>SUBSCRIBE</button>
+    		<button>SUBSCRIBE</button>    		
 	    </nav>
+
+	    <span class="show-info"><a href="#nothing"><img class="info" src="images/info.svg"></a></span>
 	</header>
 
 	<nav class="desktop-nav">
@@ -51,13 +53,6 @@
 			<li><a href="#">CROSSOVERS</a></li>
 		</ul>	
     </nav>
-
-	<!-- <div class="social-icons">
-		<img src="images/facebook.svg">
-		<img src="images/twitter.svg">
-		<img src="images/pinterest.svg">
-		<img src="images/instagram.svg">
-	</div> -->
 	
 	<section class="stories">
 
@@ -65,21 +60,14 @@
 
 			<div class="cover cover-max">
 				<a href="story.html"><img class="cover-img" src="images/buffy-2.jpg"></a>
+				<a href="story.html"><h5>BUFFY THE VAMPIRE SLAYER</h5></a>
 				<a href="story.html"><div class="blurb">
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
 					<br>
 					<a href="story.html"><h3>She&rsquo;s Out Of Her Mind</h3></a>
-					<a href="story.html"><h5>BUFFY THE VAMPIRE SLAYER</h5></a>
 					<br>
 					<span class="show-more"><a href="#nothing"><img class="more" src="images/arrow.svg"></a></span>
-
-					<!-- <div class="modal-backdrop">
-						<div class="modal">
-							<img src="images/summary.png">
-							<a href="#nothing" class="hide-modal"></a>
-						</div>
-					</div> -->
 
 					<div class="modal-backdrop">
 						<div class="modal">
@@ -93,12 +81,12 @@
 
 			<div class="cover cover-max">
 				<img class="cover-img" src="images/angel-2.jpg">
+				<h5>ANGEL</h5>
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
 					<br>
 					<h3>Happy Hearts Feel Pain</h3>
-					<h5>ANGEL</h5>
 					<br>
 					<img class="more" src="images/arrow.svg">
 				</div>
@@ -106,12 +94,12 @@
 
 			<div class="cover cover-max cover-desk">
 				<img class="cover-img" src="images/dollhouse-2.jpg">
+				<h5>DOLLHOUSE</h5>
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
 					<br>
 					<h3>A Day In The Life Of Echo</h3>
-					<h5>DOLLHOUSE</h5>
 					<br>
 					<img class="more" src="images/arrow.svg">
 				</div>
@@ -119,12 +107,12 @@
 
 			<div class="cover cover-max cover-desk">
 				<img class="cover-img" src="images/firefly-2.jpg">
+				<h5>FIREFLY</h5>
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
 					<br>
 					<h3>Strange Bedfellows</h3>
-					<h5>FIREFLY</h5>
 					<br>
 					<img class="more" src="images/arrow.svg">
 				</div>
@@ -142,12 +130,12 @@
 
 			<div class="cover cover-max cover-tab">
 				<img class="cover-img" src="images/dollhouse-2.jpg">
+				<h5>DOLLHOUSE</h5>
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
 					<br>
 					<h3>A Day In The Life Of Echo</h3>
-					<h5>DOLLHOUSE</h5>
 					<br>
 					<img class="more" src="images/arrow.svg">
 				</div>
@@ -155,12 +143,12 @@
 
 			<div class="cover cover-max cover-tab">
 				<img class="cover-img" src="images/firefly-2.jpg">
+				<h5>FIREFLY</h5>
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
 					<br>
 					<h3>Strange Bedfellows</h3>
-					<h5>FIREFLY</h5>
 					<br>
 					<img class="more" src="images/arrow.svg">
 				</div>
@@ -168,12 +156,12 @@
 
 			<div class="cover cover-max cover-desk">
 				<img class="cover-img" src="images/bsg-2.jpg">
+				<h5>BATTLESTAR GALLACTICA</h5>
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
 					<br>
 					<h3>Changing Rooms</h3>
-					<h5>BATTLESTAR GALACTICA</h5>
 					<br>
 					<img class="more" src="images/arrow.svg">
 				</div>
@@ -181,12 +169,12 @@
 			
 			<div class="cover cover-max cover-desk">
 				<img class="cover-img" src="images/fringe-2.jpg">
+				<h5>FRINGE</h5>
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
 					<br>
 					<h3>Our Bodies In Light</h3>
-					<h5>FRINGE</h5>
 					<br>
 					<img class="more" src="images/arrow.svg">
 				</div>
@@ -194,12 +182,12 @@
 
 			<div class="cover cover-max cover-desk">
 				<img class="cover-img" src="images/titanic-2.jpg">
+				<h5>TITANIC</h5>
 				<div class="blurb">
 					<img class="icon" src="images/film.svg">
 					<p>FILM</p>
 					<br>
 					<h3>The Unsinkable Ship</h3>
-					<h5>TITANIC</h5>
 					<br>
 					<img class="more" src="images/arrow.svg">
 				</div>
@@ -207,12 +195,12 @@
 
 			<div class="cover cover-max cover-desk">
 				<img class="cover-img" src="images/bob-2.jpg">
+				<h5>BOB&rsquo;S BURGERS</h5>
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
 					<br>
 					<h3>THERE'S BURGERS HERE</h3>
-					<h5>BOB&rsquo;S BURGERS</h5>
 					<br>
 					<img class="more" src="images/arrow.svg">
 				</div>
@@ -233,12 +221,12 @@
 
 			<div class="cover cover-max cover-tab">
 				<img class="cover-img" src="images/bsg-2.jpg">
+				<h5>BATTLESTAR GALLACTICA</h5>
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
 					<br>
 					<h3>Changing Rooms</h3>
-					<h5>BATTLESTAR GALACTICA</h5>
 					<br>
 					<img class="more" src="images/arrow.svg">
 				</div>
@@ -246,12 +234,12 @@
 
 			<div class="cover cover-max cover-tab">
 				<img class="cover-img" src="images/fringe-2.jpg">
+				<h5>FRINGE</h5>
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
 					<br>
 					<h3>Our Bodies In Light</h3>
-					<h5>FRINGE</h5>
 					<br>
 					<img class="more" src="images/arrow.svg">
 				</div>
@@ -259,12 +247,12 @@
 
 			<div class="cover cover-max cover-tab">
 				<img class="cover-img" src="images/titanic-2.jpg">
+				<h5>TITANIC</h5>
 				<div class="blurb">
 					<img class="icon" src="images/film.svg">
 					<p>FILM</p>
 					<br>
 					<h3>The Unsinkable Ship</h3>
-					<h5>TITANIC</h5>
 					<br>
 					<img class="more" src="images/arrow.svg">
 				</div>
@@ -272,12 +260,12 @@
 
 			<div class="cover cover-max cover-tab">
 				<img class="cover-img" src="images/bob-2.jpg">
+				<h5>BOB&rsquo;S BURGERS</h5>
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
 					<br>
 					<h3>THERE'S BURGERS HERE</h3>
-					<h5>BOB&rsquo;S BURGERS</h5>
 					<br>
 					<img class="more" src="images/arrow.svg">
 				</div>
@@ -285,12 +273,12 @@
 
 			<div class="cover cover-max">
 				<img class="cover-img" src="images/harry-2.jpg">
+				<h5>HARRY POTTER</h5>
 				<div class="blurb">
 					<img class="icon" src="images/book.svg">
 					<p>BOOK</p>
 					<br>
 					<h3>Catch Me If You Can</h3>
-					<h5>HARRY POTTER</h5>
 					<br>
 					<img class="more" src="images/arrow.svg">
 				</div>
@@ -298,12 +286,12 @@
 
 			<div class="cover cover-max">
 				<img class="cover-img" src="images/serenity-2.jpg">
+				<h5>SERENITY</h5>
 				<div class="blurb">
 					<img class="icon" src="images/film.svg">
 					<p>FILM</p>
 					<br>
 					<h3>New Friends</h3>
-					<h5>SERENITY</h5>
 					<br>
 					<img class="more" src="images/arrow.svg">
 				</div>
@@ -311,12 +299,12 @@
 
 			<div class="cover cover-max">
 				<img class="cover-img" src="images/supernatural-2.jpg">
+				<h5>SUPERNATURAL</h5>
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
 					<br>
 					<h3>Locking Horns</h3>
-					<h5>SUPERNATURAL</h5>
 					<br>
 					<img class="more" src="images/arrow.svg">
 				</div>
@@ -324,12 +312,12 @@
 
 			<div class="cover cover-max">
 				<img class="cover-img" src="images/svu-2.jpg">
+				<h5>LAW AND ORDER: SVU</h5>
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
 					<br>
 					<h3>Missing Mother</h3>
-					<h5>LAW AND ORDER : SVU</h5>
 					<br>
 					<img class="more" src="images/arrow.svg">
 				</div>
