fixed title overlays for all widths

--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@
 		<div class="cover-art">
 
 			<div class="cover cover-max">
-				<a href="story.html"><img class="cover-img" src="images/buffy-2.jpg"></a>
-				<a href="story.html"><h5>BUFFY THE VAMPIRE SLAYER</h5></a>
+				<div class="image-with-title">
+					<a href="story.html"><h5>BUFFY THE VAMPIRE SLAYER</h5></a>
+					<a href="story.html"><img class="cover-img" src="images/buffy-2.jpg"></a>
+				</div>	
 				<a href="story.html"><div class="blurb">
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
@@ -80,8 +82,10 @@
 			</div>
 
 			<div class="cover cover-max">
-				<img class="cover-img" src="images/angel-2.jpg">
-				<h5>ANGEL</h5>
+				<div class="image-with-title">
+					<h5>ANGEL</h5>
+					<img class="cover-img" src="images/angel-2.jpg">
+				</div>	
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
@@ -93,8 +97,10 @@
 			</div>
 
 			<div class="cover cover-max cover-desk">
-				<img class="cover-img" src="images/dollhouse-2.jpg">
-				<h5>DOLLHOUSE</h5>
+				<div class="image-with-title">
+					<h5>DOLLHOUSE</h5>			
+					<img class="cover-img" src="images/dollhouse-2.jpg">
+				</div>	
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
@@ -106,8 +112,10 @@
 			</div>
 
 			<div class="cover cover-max cover-desk">
-				<img class="cover-img" src="images/firefly-2.jpg">
-				<h5>FIREFLY</h5>
+				<div class="image-with-title">
+					<h5>FIREFLY</h5>
+					<img class="cover-img" src="images/firefly-2.jpg">
+				</div>	
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
@@ -129,8 +137,10 @@
 			</div>
 
 			<div class="cover cover-max cover-tab">
-				<img class="cover-img" src="images/dollhouse-2.jpg">
-				<h5>DOLLHOUSE</h5>
+				<div class="image-with-title">
+					<h5>DOLLHOUSE</h5>
+					<img class="cover-img" src="images/dollhouse-2.jpg">
+				</div>
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
@@ -142,8 +152,10 @@
 			</div>		
 
 			<div class="cover cover-max cover-tab">
-				<img class="cover-img" src="images/firefly-2.jpg">
-				<h5>FIREFLY</h5>
+				<div class="image-with-title">
+					<h5>FIREFLY</h5>
+					<img class="cover-img" src="images/firefly-2.jpg">
+				</div>
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
@@ -155,8 +167,10 @@
 			</div>
 
 			<div class="cover cover-max cover-desk">
-				<img class="cover-img" src="images/bsg-2.jpg">
-				<h5>BATTLESTAR GALLACTICA</h5>
+				<div class="image-with-title">
+					<h5>BATTLESTAR GALLACTICA</h5>
+					<img class="cover-img" src="images/bsg-2.jpg">
+				</div>	
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
@@ -168,8 +182,10 @@
 			</div>
 			
 			<div class="cover cover-max cover-desk">
-				<img class="cover-img" src="images/fringe-2.jpg">
-				<h5>FRINGE</h5>
+				<div class="image-with-title">
+					<h5>FRINGE</h5>
+					<img class="cover-img" src="images/fringe-2.jpg">
+				</div>
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
@@ -181,8 +197,10 @@
 			</div>
 
 			<div class="cover cover-max cover-desk">
-				<img class="cover-img" src="images/titanic-2.jpg">
-				<h5>TITANIC</h5>
+				<div class="image-with-title">
+					<h5>TITANIC</h5>
+					<img class="cover-img" src="images/titanic-2.jpg">
+				</div>
 				<div class="blurb">
 					<img class="icon" src="images/film.svg">
 					<p>FILM</p>
@@ -194,8 +212,10 @@
 			</div>
 
 			<div class="cover cover-max cover-desk">
-				<img class="cover-img" src="images/bob-2.jpg">
-				<h5>BOB&rsquo;S BURGERS</h5>
+				<div class="image-with-title">
+					<h5>BOB&rsquo;S BURGERS</h5>
+					<img class="cover-img" src="images/bob-2.jpg">
+				</div>	
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
@@ -220,8 +240,10 @@
 			</div>
 
 			<div class="cover cover-max cover-tab">
-				<img class="cover-img" src="images/bsg-2.jpg">
-				<h5>BATTLESTAR GALLACTICA</h5>
+				<div class="image-with-title">
+					<h5>BATTLESTAR GALLACTICA</h5>
+					<img class="cover-img" src="images/bsg-2.jpg">
+				</div>	
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
@@ -233,8 +255,10 @@
 			</div>
 
 			<div class="cover cover-max cover-tab">
-				<img class="cover-img" src="images/fringe-2.jpg">
-				<h5>FRINGE</h5>
+				<div class="image-with-title">
+					<h5>FRINGE</h5>
+					<img class="cover-img" src="images/fringe-2.jpg">
+				</div>	
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
@@ -246,8 +270,10 @@
 			</div>
 
 			<div class="cover cover-max cover-tab">
-				<img class="cover-img" src="images/titanic-2.jpg">
-				<h5>TITANIC</h5>
+				<div class="image-with-title">
+					<h5>TITANIC</h5>
+					<img class="cover-img" src="images/titanic-2.jpg">
+				</div>
 				<div class="blurb">
 					<img class="icon" src="images/film.svg">
 					<p>FILM</p>
@@ -259,8 +285,10 @@
 			</div>
 
 			<div class="cover cover-max cover-tab">
-				<img class="cover-img" src="images/bob-2.jpg">
-				<h5>BOB&rsquo;S BURGERS</h5>
+				<div class="image-with-title">
+					<h5>BOB&rsquo;S BURGERS</h5>
+					<img class="cover-img" src="images/bob-2.jpg">
+				</div>	
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
@@ -272,8 +300,10 @@
 			</div>
 
 			<div class="cover cover-max">
-				<img class="cover-img" src="images/harry-2.jpg">
-				<h5>HARRY POTTER</h5>
+				<div class="image-with-title">
+					<h5>HARRY POTTER</h5>			
+					<img class="cover-img" src="images/harry-2.jpg">
+				</div>	
 				<div class="blurb">
 					<img class="icon" src="images/book.svg">
 					<p>BOOK</p>
@@ -285,8 +315,10 @@
 			</div>
 
 			<div class="cover cover-max">
-				<img class="cover-img" src="images/serenity-2.jpg">
-				<h5>SERENITY</h5>
+				<div class="image-with-title">
+					<h5>SERENITY</h5>				
+					<img class="cover-img" src="images/serenity-2.jpg">
+				</div>	
 				<div class="blurb">
 					<img class="icon" src="images/film.svg">
 					<p>FILM</p>
@@ -298,8 +330,10 @@
 			</div>
 
 			<div class="cover cover-max">
-				<img class="cover-img" src="images/supernatural-2.jpg">
-				<h5>SUPERNATURAL</h5>
+				<div class="image-with-title">
+					<h5>SUPERNATURAL</h5>			
+					<img class="cover-img" src="images/supernatural-2.jpg">
+				</div>	
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
@@ -311,8 +345,10 @@
 			</div>
 
 			<div class="cover cover-max">
-				<img class="cover-img" src="images/svu-2.jpg">
-				<h5>LAW AND ORDER: SVU</h5>
+				<div class="image-with-title">
+					<h5>LAW AND ORDER: SVU</h5>
+					<img class="cover-img" src="images/svu-2.jpg">
+				</div>
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
