played with styles, nothing really changed

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
 						<li><a href="#">Crossovers</a></li>
 					</ul>
         		</li>
-        	</ul>	
-	    	<h1><a href="index.html">&nbspChapter Zero</a></h1>
+        	</ul>
+        	<!-- <img class="logo" src="images/logo.svg">	 -->
+	    	<h1><a href="index.html">&nbspChapter Zer0</a></h1>
     		<button>SUBSCRIBE</button>    		
 	    </nav>
 
@@ -306,7 +307,7 @@
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
 					<br>
-					<h3>THERE'S BURGERS HERE</h3>
+					<h3>There's Burgers Here</h3>
 					<br>
 					<br>
 					<img class="more" src="images/arrow.svg">
