--- a/story.html
+++ b/story.html
@@ -33,6 +33,7 @@
 	    	<h1><a href="index.html">&nbspChapter Zero</a></h1>
     		<button>SUBSCRIBE</button>
 	    </nav>
+	    <span class="show-info"><a href="#nothing"><img class="info" src="images/info.svg"></a></span>
 	</header>
 
 	<nav class="desktop-nav">
@@ -59,6 +60,10 @@
 		<img class="buffy-banner" src="images/buffy-banner.jpg">
 		<div class="sticky-socials-horiz">
 			<a href="#"><img src="images/sticky-socials-horiz.svg"></a>
+		</div>
+		<div class="reading-progress">
+			<h5>She's Out of Her Mind</h5>
+			<div class="progress-bar"></div>
 		</div>
 		<h3>She&rsquo;s Out of Her Mind</h3>
 		<h4>by BeneficialAddiction</h4>
